# sum-cli

./: Makefile  README.md  hello.py  pyproject.toml
sum_cli/: cli.py  config.py  embedings.py  get_text_article.py  promt_templates.py  schema.py  summarizer.py
